Edit CSS for memory game

--- a/memory-game.html
+++ b/memory-game.html
@@ -20,8 +20,24 @@
 
 
     </div>
-
-    <h1 class="page-title">Memory Game</h1>
+    <!--     Title            -->
+    <h1 class="page-title">
+        Memory Game
+    </h1>
+    <!--    Start overlay           -->
+    <div class="overlay-text">
+        Click To Start!
+    </div>
+    <!--     game over overlay            -->
+    <div id="game-over-text" class="overlay-text">
+        GAME OVER!
+        <span class="overlay-text-small">Click to try again</span>
+    </div>
+    <!--     Victory overlay            -->
+    <div id="victory-text" class="overlay-text">
+        We have a winner!!!!!!!!
+        <span class="overlay-text-small">Click to start over!</span>
+    </div>
 
     <!--     Game Area             -->
 
@@ -58,7 +74,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-2.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -66,7 +82,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-2.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -74,7 +90,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-3.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -82,7 +98,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-3.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -90,7 +106,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-4.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -98,7 +114,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-4.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -106,7 +122,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-5.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -114,7 +130,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-5.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -122,7 +138,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-6.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -130,7 +146,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-6.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -138,7 +154,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-7.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -146,7 +162,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-7.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -154,7 +170,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-8.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -162,11 +178,11 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img src="assets/img/card-8.jpg" alt="snake">
             </div>
         </div>
-        
-        
+
+
 
 
     </div>
