Add memory game functionality via tutorial

--- a/memory-game.html
+++ b/memory-game.html
@@ -25,7 +25,7 @@
         Memory Game
     </h1>
     <!--    Start overlay           -->
-    <div class="overlay-text">
+    <div class="overlay-text visible">
         Click To Start!
     </div>
     <!--     game over overlay            -->
@@ -58,7 +58,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-1.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -66,7 +66,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-1.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-1.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -74,7 +74,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-2.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-2.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -82,7 +82,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-2.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-2.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -90,7 +90,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-3.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-3.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -98,7 +98,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-3.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-3.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -106,7 +106,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-4.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-4.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -114,7 +114,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-4.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-4.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -122,7 +122,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-5.jpg" alt="snake">
+                <img class="card-value"  src="assets/img/card-5.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -130,7 +130,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-5.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-5.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -138,7 +138,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-6.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-6.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -146,7 +146,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-6.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-6.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -154,7 +154,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-7.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-7.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -162,7 +162,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-7.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-7.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -170,7 +170,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-8.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-8.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -178,7 +178,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img src="assets/img/card-8.jpg" alt="snake">
+                <img class="card-value" src="assets/img/card-8.jpg" alt="snake">
             </div>
         </div>
 
@@ -197,7 +197,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-    <script src="assets/js/memory-game.js" type="text/javascript"></script>
+    <script src="assets/js/memory-game.js" type="text/javascript" async></script>
 </body>
 
 </html>
