Add custom sounds to memory game, minor style changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="row justify-content-center">   
     <div class="col game-icon memory" id="memory-game"> 
         <br><br><br><br><br> 
-        <h1>Memory Game</h1>      
+        <h1>Reptile Hunt</h1>      
     </div> 
     <div class="col game-icon snake" id="snake">
         <br><br><br><br><br> 
