--- a/memory-game.html
+++ b/memory-game.html
@@ -13,8 +13,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="back-to-home">
-
+<a href="index.html">
                 <p>Back to Arcade</p>
+                </a>
             </div>
         </div>
 
@@ -22,12 +23,14 @@
     </div>
     <!--     Title            -->
     <h1 class="page-title">
-        Memory Game
+        Reptile Hunt
     </h1>
     <!--    Start overlay           -->
     <div class="overlay-text visible">
-        Click To Start!
+        Welcome to Reptile Hunt!
+        <span class="overlay-text-small">Click on a card to reveal a reptile, try to find the matching card. You have 100 seconds to find all the matches. Good Luck!<br> Click here to start!</span>
     </div>
+    
     <!--     game over overlay            -->
     <div id="game-over-text" class="overlay-text">
         GAME OVER!
