--- a/memory-game.html
+++ b/memory-game.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-
+    <link rel="icon" type="image/png" href="assets/img/card-back.jpg">
     <link rel="stylesheet" href="assets/css/memory.css">
 </head>
 
