Add custom code to log flips and time in results.

--- a/memory-game.html
+++ b/memory-game.html
@@ -39,7 +39,7 @@
     <!--     Victory overlay            -->
     <div id="victory-text" class="overlay-text">
         We have a winner!!!!!!!!
-        <span class="overlay-text-small">Click to start over!</span>
+        <span id="winner" class="overlay-text-small">Click to start over!</span>
     </div>
 
     <!--     Game Area             -->
