--- a/memory-game.html
+++ b/memory-game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
     <script src="https://kit.fontawesome.com/195f3c863e.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="assets/img/card-back.jpg">
+    <link rel="icon" type="image/png" href="assets/img/card-5.jpg">
     <link rel="stylesheet" href="assets/css/memory.css">
 </head>
 
