--- a/index.html
+++ b/index.html
@@ -4,83 +4,185 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kenan's Arcade</title>
-    <link rel="icon" type="image/png" href="assets/img/favicon.jpg">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Memory Game</title>
     <script src="https://kit.fontawesome.com/195f3c863e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/png" href="/assets/img/card-5.jpg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/memory.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 banner">
-                <h1>Kenan's Arcade</h1>
-                <p>Welcome to my Javascript game arcade. To begin click on a game!</p>
-
-            </div>
-
-        </div>
-
-
-
-        <div class="row justify-content-center">
-            <div class="col game-icon memory" id="memory-game">
-                <br><br><br><br><br>
-                <h1>Reptile Hunt</h1>
-            </div>
-            <div class="col game-icon snake" id="snake">
-                <br><br><br><br><br>
-                <h1>Snake</h1>
-            </div>
-            <div class="col game-icon drum-kit" id="drum-kit">
-                <br><br><br><br><br>
-                <h1>Drum Kit</h1>
-            </div>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col game-icon flappy-bird" id="flappy-bird">
-                <br><br><br><br><br>
-                <h1>Flappy Bird</h1>
-            </div>
-            <div class="col game-icon simon-says" id="simon-says">
-                <br><br><br><br><br>
-                <h1>Simon Says</h1>
-            </div>
-            <div class="col game-icon clock" id="clock">
-                <br><br><br><br><br>
-                <h1>Clock</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col play-button">
-                <audio src="assets/audio/home-theme.mp3" id="audio"></audio>
-                <i class="fa fa-play play fa-lg" id="play"></i>
-            </div>
-
-        </div>
-
-
+    <!--Title-->
+    <h1 class="page-title">
+        Snake Hunt
+    </h1>
+    <!--Start overlay-->
+    <div class="overlay-text visible">
+        Welcome to Snake Hunt!
+        <span class="overlay-text-small">Click on a card to reveal a snake, try to find the matching snake. You have
+            100 seconds to find all the matches. Good Luck!<br> Click here to start!</span>
     </div>
-
-
-
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    <!--game over overlay-->
+    <div id="game-over-text" class="overlay-text">
+        GAME OVER!
+        <span class="overlay-text-small">Click to try again</span>
+    </div>
+    <!--Victory overlay-->
+    <div id="victory-text" class="overlay-text">
+        We have a winner!!!!!!!!
+        <span id="winner" class="overlay-text-small"></span>
+    </div>
+    <!--Game Area-->
+    <div class="game-container">
+        <div class="game-info-container">
+            <!--Game information-->
+            <div class="game-info">
+                Time <span id="time-remaining">100</span>
+            </div>
+            <div class="game-info">
+                Flips <span id="flips">0</span>
+            </div>
+        </div>
+        <!--Cards-->
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-1.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-1.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-2.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-2.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-3.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-3.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-4.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-4.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-5.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-5.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-6.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-6.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-7.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-7.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-8.jpg" alt="snake">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img src="assets/img/card-back.jpg" alt="snake">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="assets/img/card-8.jpg" alt="snake">
+            </div>
+        </div>
+    </div>
+    <!--Javascript-->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-    <script src="assets/js/main.js" type="text/javascript"></script>
+    <script src="assets/js/memory-game.js" type="text/javascript" async></script>
 </body>
-
 </html>
