Add audio play/pause button and functionality

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,26 +10,26 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/memory.css">
 </head>
-
 <body>
     <!--Title-->
     <h1 class="page-title">
-        Snake Hunt
+        Snake Hunt 
+        <i id="mute-button" class="fas fa-play"></i>
     </h1>
     <!--Start overlay-->
     <div class="overlay-text visible">
         Welcome to Snake Hunt!
         <span class="overlay-text-small">Click on a card to reveal a snake, try to find the matching snake. You have
-            100 seconds to find all the matches. Good Luck!<br> Click here to start!</span>
+            100 seconds to find all the matches. Good Luck!<br> Click to start!</span>
     </div>
     <!--game over overlay-->
     <div id="game-over-text" class="overlay-text">
         GAME OVER!
-        <span class="overlay-text-small">Click to try again</span>
+        <span class="overlay-text-small">Click to try again!</span>
     </div>
     <!--Victory overlay-->
     <div id="victory-text" class="overlay-text">
-        We have a winner!!!!!!!!
+        We have a winner!
         <span id="winner" class="overlay-text-small"></span>
     </div>
     <!--Game Area-->
