Commit so I can get help from student support on latest code

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <link rel="stylesheet" href="assets/css/memory.css">
 </head>
 <body>
+    <!-- Background Music Controll-->
+    <div class="audio-button">
+        <h4>Background Music</h4>
+        <i id="mute-button" class="fas fa-volume-mute"></i>
+    </div>
     <!--Title-->
     <h1 class="page-title">
         Snake Hunt 
-        <i id="mute-button" class="fas fa-play"></i>
+        
     </h1>
     <!--Start overlay-->
     <div class="overlay-text visible">
