Add media query for overlay text

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/memory.css">
 </head>
+
 <body>
     <!-- Background Music Controll-->
     <div class="audio-button">
@@ -18,23 +20,23 @@
     </div>
     <!--Title-->
     <h1 class="page-title">
-        Snake Hunt 
-        
+        Snake Hunt
+
     </h1>
     <!--Start overlay-->
     <div class="overlay-text visible">
-        Welcome to Snake Hunt!
+        <h1>Welcome to Snake Hunt!</h1>
         <span class="overlay-text-small">Click on a card to reveal a snake, try to find the matching snake. You have
             100 seconds to find all the matches. Good Luck!<br> Click to start!</span>
     </div>
     <!--game over overlay-->
     <div id="game-over-text" class="overlay-text">
-        GAME OVER!
+        <h1>GAME OVER!</h1>
         <span class="overlay-text-small">Click to try again!</span>
     </div>
     <!--Victory overlay-->
     <div id="victory-text" class="overlay-text">
-        We have a winner!
+        <h1>We have a winner!</h1>
         <span id="winner" class="overlay-text-small"></span>
     </div>
     <!--Game Area-->
@@ -189,4 +191,5 @@
     </script>
     <script src="assets/js/memory-game.js" type="text/javascript" async></script>
 </body>
+
 </html>
