--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
+    <title>Snake Hunt</title>
     <script src="https://kit.fontawesome.com/195f3c863e.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="/assets/img/card-5.jpg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -13,8 +13,6 @@
 </head>
 
 <body>
-
-
     <!-- Background Music Controll-->
     <div class="control-container d-flex justify-content-center">
         <div class="music-icon">
@@ -193,10 +191,8 @@
             <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="http://www.github.com" target="_blank"><i class="fab fa-github"></i></a>
             <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-
         </div>
     </footer>
-
     <!--Javascript-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
