Change formatting for 1080p resolution

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <img class="card-value" src="assets/img/card-6.jpg" alt="snake">
             </div>
         </div>
-        <div class="card">
+    <!--    <div class="card">
             <div class="card-back card-face">
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
@@ -184,6 +184,7 @@
                 <img class="card-value" src="assets/img/card-8.jpg" alt="snake">
             </div>
         </div>
+        -->
     </div>
     <footer>
         <div class="links">
