Move images to cloudinary

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-1.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-1.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -69,7 +69,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-1.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-1.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -77,7 +77,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-2.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-2.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -85,7 +85,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-2.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-2.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -93,7 +93,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-3.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-3.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -101,7 +101,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-3.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-3.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -109,7 +109,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-4.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-4.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -117,7 +117,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-4.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-4.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -125,7 +125,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-5.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-5.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -133,7 +133,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-5.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-5.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -141,7 +141,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-7.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-7.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -149,7 +149,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-7.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-7.jpg" alt="snake">
             </div>
         </div>
     <!--    <div class="card">
@@ -157,7 +157,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-6.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-6.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -165,7 +165,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-6.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-6.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -173,7 +173,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-8.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-8.jpg" alt="snake">
             </div>
         </div>
         <div class="card">
@@ -181,7 +181,7 @@
                 <img src="assets/img/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="assets/img/card-8.jpg" alt="snake">
+                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-8.jpg" alt="snake">
             </div>
         </div>
         -->
