--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Hunt</title>
     <script src="https://kit.fontawesome.com/195f3c863e.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="/assets/img/card-5.jpg">
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610287379/images/albums/MS2/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/memory.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
         <!--Game cards-->
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-1.jpg" alt="snake">
@@ -66,7 +66,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-1.jpg" alt="snake">
@@ -74,7 +74,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-2.jpg" alt="snake">
@@ -82,7 +82,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-2.jpg" alt="snake">
@@ -90,7 +90,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-3.jpg" alt="snake">
@@ -98,7 +98,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-3.jpg" alt="snake">
@@ -106,7 +106,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-4.jpg" alt="snake">
@@ -114,7 +114,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-4.jpg" alt="snake">
@@ -122,7 +122,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-5.jpg" alt="snake">
@@ -130,7 +130,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-5.jpg" alt="snake">
@@ -138,7 +138,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-7.jpg" alt="snake">
@@ -146,7 +146,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-7.jpg" alt="snake">
@@ -154,7 +154,7 @@
         </div>
     <!--    <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-6.jpg" alt="snake">
@@ -162,7 +162,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-6.jpg" alt="snake">
@@ -170,7 +170,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-8.jpg" alt="snake">
@@ -178,7 +178,7 @@
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="assets/img/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
             <div class="card-front card-face">
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-8.jpg" alt="snake">
@@ -203,7 +203,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
-    <script src="assets/js/memory-game.js" type="text/javascript" async></script>
+    <script src="assets/js/main.js" async></script>
 </body>
 
 </html>
