--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Hunt</title>
     <script src="https://kit.fontawesome.com/195f3c863e.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610287379/images/albums/MS2/favicon.png">
+    <link rel="icon" type="image/png"
+        href="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610287379/images/albums/MS2/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -58,101 +59,138 @@
         <!--Game cards-->
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-1.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-1.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-1.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-1.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-2.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-2.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-2.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-2.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-3.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-3.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-3.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-3.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-4.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-4.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-4.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-4.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-5.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-5.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-5.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-5.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-7.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-7.jpg"
+                    alt="snake">
             </div>
         </div>
         <div class="card">
             <div class="card-back card-face">
-                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
+                <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg"
+                    alt="snake">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-7.jpg" alt="snake">
+                <img class="card-value"
+                    src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-7.jpg"
+                    alt="snake">
             </div>
         </div>
-    <!--    <div class="card">
+        <!--  
+              <div class="card d-none d-md-block">
             <div class="card-back card-face">
                 <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
@@ -160,7 +198,7 @@
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-6.jpg" alt="snake">
             </div>
         </div>
-        <div class="card">
+        <div class="card d-none d-md-block">
             <div class="card-back card-face">
                 <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
@@ -168,7 +206,7 @@
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284792/images/albums/MS2/Cards/card-6.jpg" alt="snake">
             </div>
         </div>
-        <div class="card">
+        <div class="card d-none d-md-block">
             <div class="card-back card-face">
                 <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
@@ -176,7 +214,7 @@
                 <img class="card-value" src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284791/images/albums/MS2/Cards/card-8.jpg" alt="snake">
             </div>
         </div>
-        <div class="card">
+        <div class="card d-none d-md-block">
             <div class="card-back card-face">
                 <img src="https://res.cloudinary.com/dyxe4g62g/image/upload/v1610285621/images/albums/MS2/Cards/card-back.jpg" alt="snake">
             </div>
@@ -186,6 +224,7 @@
         </div>
         -->
     </div>
+    <br><br><br>
     <footer>
         <div class="links">
             <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -193,6 +232,7 @@
             <a href="http://www.github.com" target="_blank"><i class="fab fa-github"></i></a>
             <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
+
     </footer>
     <!--Javascript-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
