Add scoreboard and logic for reporting score to scoreboard

--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
         <span id="winner" class="overlay-text-small"></span>
     </div>
     <!--Game Area-->
+    <div class="scoreboard">
+        <h5>Scoreboard</h5>
+        <ul class="score-text">
+            <li><span id="score-one"></span></li>
+            <li><span id="score-two"></span></li>
+            <li><span id="score-three"></span></li>
+            <li><span id="score-four"></span></li>
+            <li><span id="score-five"></span></li>
+        </ul>
+    </div>
+
+    <!--Game Area-->
     <div class="game-container">
         <div class="game-info-container">
             <!--Game information-->
