Add highscore to local storage via api

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                     <h4 class="modal-title">Welcome to Snake Hunt</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Click on a card to reveal a snake, try to find the matching card. You have
-                        120 seconds to find all the matches.<br> Good Luck!<br><br></p>
+                    <p>Click on a card to reveal a snake, try to find the matching card. Find all the matches before the time runs out.<br> Good Luck!<br><br></p> 
                     <h5>Select a difficulty level:</h5>
                 </div>
                 <div class="modal-footer">
