Fix music localStorage issue

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="control-container d-flex justify-content-center">
         <div class="music-icon">
             <h4>Music</h4>
-            <i id="mute-button" class="fas fa-volume-mute"></i>
+            <i id="mute-button" class="fa fa-volume-mute"></i>
         </div>
         <div class="restart-icon">
             <h4>Restart</h4>
@@ -81,7 +81,7 @@
     <div class="scoreboard">
         <h5>Last 5 Rounds</h5>
         <ul class="score-text">
-            <li><span id="score-one"></span></li>
+            <li><span id="score-one">You havent played yet!</span></li>
             <li><span id="score-two"></span></li>
             <li><span id="score-three"></span></li>
             <li><span id="score-four"></span></li>
