Add span for screen readers on favicons and reset and music buttons

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="music-icon">
             <h4>Music</h4>
             <i id="mute-button" class="fa fa-volume-mute"></i>
+            <span class="sr-only">Play/Stop Music</span>
         </div>
         <h1 class="page-title">
         <span class="page-title-box">Snake Hunt</span>
@@ -27,6 +28,7 @@
         <div class="restart-icon">
             <h4>Restart</h4>
             <i id="restart-button" class="fas fa-redo-alt"></i>
+            <span class="sr-only">Restart Game</span>
         </div>
     </div>
     <!-- Welcome modal -->
@@ -238,10 +240,10 @@
     <br><br><br>
     <footer>
         <div class="links">
-            <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="http://www.github.com" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><span class="sr-only">Instagram</span></a>
+            <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i><span class="sr-only">Facebook</span></a>
+            <a href="http://www.github.com" target="_blank"><i class="fab fa-github"></i><span class="sr-only">Github</span></a>
+            <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i><span class="sr-only">Twitter</span></a>
         </div>
 
     </footer>
